packages/rule-engine/src/components/item/index.scss
@import "../../styles/variables.scss";
@import "../../styles/mixins.scss";

.cc-rule-engine-item-wrapper {
	@include flexColumn();
	padding: $spacing 0;

	> .cc-rule-engine-logical-operator {
		min-width: 65px;
	}

	.cc-rule-engine-item {
		background-color: rgba(#1a191b, 0.02);
		padding: $spacing;
		border-radius: 4px;
		border: 1px solid #ddd;
	}

	&:first-child {
		padding-top: 0;

		> .cc-rule-engine-logical-operator {
			display: none;
		}
	}

	/**
	 * These are status classes added by react sortablejs.
	 * @see components/root-query.txs @ <ReactSortable> for declarations.
	 */

	&:hover {
		$placeholder: 1;
	}

	// On mousedown of handle. First as its on during drag as well.
	&.is-chosen {
		.cc-rule-engine-item {
			$placeholder: 1;
		}
	}

	// Ghost item that appears in list as you sort.
	&.is-placeholder {
		.cc-rule-engine-item {
			border-color: transparent;
			background: lightblue;
			@include elevation(3);
		}
	}

	// Dragged item class. This is the one shown with cursor.
	&.is-dragging {
		.cc-rule-engine-item {
			border-color: transparent;
			background: lightblue;
		}

		.cc-rule-engine-logical-operator {
			display: none;
		}
	}
}

.cc-condition-editor-item-actions {
	line-height: 1;
	display: flex;

	.components-button.has-icon {
		padding: 0;
		border: 1px solid #ddd;
		background-color: #fff;
		border-radius: 0;

		&:focus {
			// Ensures that the outline is always fully visible.
			z-index: 1;
		}

		.move-item {
			// Currently this icon has hardcoded size. Open PR to fix.
			svg {
				height: 18px;
				width: 18px;
			}
		}

		/** Borders for button group appearance */
		&:first-child {
			border-top-left-radius: 4px;
			border-bottom-left-radius: 4px;
			border-right: 0;
		}

		&:last-child {
			border-top-right-radius: 4px;
			border-bottom-right-radius: 4px;
		}
	}
}

